; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_messages.c_test_refs_reflog_messages__detaching_writes_reflog.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_messages.c_test_refs_reflog_messages__detaching_writes_reflog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"me\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"foo@example.com\00", align 1
@.str.2 = private unnamed_addr constant [73 x i8] c"checkout: moving from master to e90810b8df3e80c413d903f631643c716887138d\00", align 1
@.str.3 = private unnamed_addr constant [41 x i8] c"e90810b8df3e80c413d903f631643c716887138d\00", align 1
@g_repo = common dso_local global i32 0, align 4
@GIT_HEAD_FILE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [41 x i8] c"a65fedf39aefe402d3bb6e24df4d4f5fe4547750\00", align 1
@.str.5 = private unnamed_addr constant [74 x i8] c"checkout: moving from e90810b8df3e80c413d903f631643c716887138d to haacked\00", align 1
@.str.6 = private unnamed_addr constant [19 x i8] c"refs/heads/haacked\00", align 1
@.str.7 = private unnamed_addr constant [41 x i8] c"258f0e2a959a364e40ed6603d5d44fbb24765b10\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_reflog_messages__detaching_writes_reflog() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = call i32 @git_signature_now(i32** %1, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  store i8* getelementptr inbounds ([73 x i8], [73 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  %6 = call i32 @git_oid_fromstr(i32* %2, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.3, i64 0, i64 0))
  %7 = load i32, i32* @g_repo, align 4
  %8 = call i32 @git_repository_set_head_detached(i32 %7, i32* %2)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* @g_repo, align 4
  %11 = load i32, i32* @GIT_HEAD_FILE, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @cl_reflog_check_entry(i32 %10, i32 %11, i32 0, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.3, i64 0, i64 0), i32* null, i8* %12)
  store i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  %14 = load i32, i32* @g_repo, align 4
  %15 = call i32 @git_repository_set_head(i32 %14, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.6, i64 0, i64 0))
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32, i32* @g_repo, align 4
  %18 = load i32, i32* @GIT_HEAD_FILE, align 4
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 @cl_reflog_check_entry(i32 %17, i32 %18, i32 0, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.7, i64 0, i64 0), i32* null, i8* %19)
  %21 = load i32*, i32** %1, align 8
  %22 = call i32 @git_signature_free(i32* %21)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_signature_now(i32**, i8*, i8*) #1

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #1

declare dso_local i32 @git_repository_set_head_detached(i32, i32*) #1

declare dso_local i32 @cl_reflog_check_entry(i32, i32, i32, i8*, i8*, i32*, i8*) #1

declare dso_local i32 @git_repository_set_head(i32, i8*) #1

declare dso_local i32 @git_signature_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
